# app/Http/Controllers/Api/V1/Auth/LoginController.php
@@ -2,10 +2,11 @@
 
 namespace App\Http\Controllers\Api\V1\Auth;
 
+use App\Domain\User\Models\User;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Auth\LoginUserRequest;
+use App\Http\Resources\ApiResponseResource;
 use App\Http\Resources\Auth\UserResource;
-use App\Domain\User\Models\User;
 use Illuminate\Http\Response;
 use Illuminate\Support\Facades\Hash;
 use Illuminate\Validation\ValidationException;
@@ -25,9 +26,11 @@ class LoginController extends Controller
         $device = $request->userAgent() ?? '';
         $expiresAt = $request->remember ? null : now()->addMinutes(config('session.lifetime'));
 
-        return response()->json([
-            'access_token' => $user->createToken($device, expiresAt: $expiresAt)->plainTextToken,
-            'user' => new UserResource($user),
-        ], Response::HTTP_OK);
+        return new ApiResponseResource([
+            'data' => [
+                'access_token' => $user->createToken($device, expiresAt: $expiresAt)->plainTextToken,
+                'user' => new UserResource($user),
+            ],
+        ])->response()->setStatusCode(Response::HTTP_OK);
     }
 }
