# app/Http/Controllers/Api/V1/Auth/RegisterController.php
@@ -5,6 +5,7 @@ namespace App\Http\Controllers\Api\V1\Auth;
 use App\Domain\User\Services\UserService;
 use App\Http\Controllers\Controller;
 use App\Http\Requests\Auth\RegisterUserRequest;
+use App\Http\Resources\ApiResponseResource;
 use App\Http\Resources\Auth\ProfileResource;
 
 class RegisterController extends Controller
@@ -26,9 +27,11 @@ class RegisterController extends Controller
 
         $user->refresh();
 
-        return response()->json([
-            'access_token' => $accessToken,
-            'user' => new ProfileResource($user),
-        ]);
+        return new ApiResponseResource([
+            'data' => [
+                'access_token' => $accessToken,
+                'user' => new ProfileResource($user),
+            ],
+        ])->response();
     }
 }
